# benchmark

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  pyproject.toml  url.py
.github/workflows/: merge-dev.yml  merge-prod.yml  on-pr.yml
alembic/: env.py
alembic/versions/: 438edcccfeeb_init.py  832067b45827_init.py  d556b911eaa9_adds_planned_set.py  dc0a1359de88_init.py
app/: auth.py  dependencies.py  main.py
app/db/: database.py  models.py
app/routers/: auth.py  exercises.py  musclegroups.py  permissions.py  planned_sets.py  roles.py  sets.py  users.py  weights.py  workout_exercises.py  workout_routines.py  workouts.py
tests/: fixtures.py  test_exercises.py  test_muscle_groups.py  test_planned_sets.py  test_sets.py  test_workout_routines.py  test_workouts.py  utils.py
